--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vux": "^2.9.4",
+    "vux-loader": "^1.2.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
