--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vux": "^2.9.4",
